--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 management.endpoints.web.exposure.include=health,info
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=10s
+telegram.bot.path=/telegram-webhook
