--- a/server/pom.xml
+++ b/server/pom.xml
@@ -8,28 +8,11 @@
   <name>server</name>
   <url>http://maven.apache.org</url>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot.version>3.5.3</spring-boot.version>
-    </properties>
-
     <parent>
         <groupId>com.haynesgt.agentic</groupId>
         <artifactId>agentic</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
   <build>
     <plugins>
@@ -128,6 +111,12 @@
   <dependencies>
 
       <dependency>
+          <groupId>com.haynesgt.agentic</groupId>
+          <artifactId>agent</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
@@ -143,10 +132,10 @@
           <artifactId>spring-boot-starter-actuator</artifactId>
       </dependency>
 
-      <dependency>
-      <groupId>io.temporal</groupId>
-      <artifactId>temporal-sdk</artifactId>
-    </dependency>
+        <dependency>
+          <groupId>io.temporal</groupId>
+          <artifactId>temporal-sdk</artifactId>
+        </dependency>
 
     <dependency>
       <groupId>io.temporal</groupId>
@@ -157,7 +146,6 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
       <scope>test</scope>
     </dependency>
 
