--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,11 @@ management.endpoints.web.exposure.include=health,info
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=10s
 telegram.bot.path=/telegram-webhook
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/agentic
+spring.datasource.username=postgres
+spring.datasource.password=${POSTGRES_PASS}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
