--- a/server/pom.xml
+++ b/server/pom.xml
@@ -149,6 +149,12 @@
           <artifactId>temporal-sdk</artifactId>
         </dependency>
 
+      <dependency>
+          <groupId>org.telegram</groupId>
+          <artifactId>telegrambots-meta</artifactId>
+          <version>9.0.0</version>
+      </dependency>
+
     <dependency>
       <groupId>io.temporal</groupId>
       <artifactId>temporal-testing</artifactId>
