feat: set up dockerfile

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -25,10 +25,17 @@
           <target>21</target>
         </configuration>
       </plugin>
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-        </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal> <!-- THIS is key -->
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
 
     <pluginManagement>
