feat: docker compose and log some thoughts

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 management.endpoints.web.exposure.include=health,info
-server.shutdown=graceful
-spring.lifecycle.timeout-per-shutdown-phase=10s
+server.shutdown=immediate
+spring.lifecycle.timeout-per-shutdown-phase=1s
 telegram.bot.path=/telegram-webhook
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/agentic
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PASS}/agentic
 spring.datasource.username=postgres
 spring.datasource.password=${POSTGRES_PASS}
 
