feat: various updates

--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,14 @@
                 <scope>import</scope>
             </dependency>
 
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.30</version> <!-- or latest -->
+                <scope>provided</scope>
+            </dependency>
+
             <dependency>
                 <groupId>io.temporal</groupId>
                 <artifactId>temporal-sdk</artifactId>
