--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -8,6 +8,12 @@
     <name>worker</name>
     <url>http://maven.apache.org</url>
 
+    <parent>
+        <groupId>com.haynesgt.agentic</groupId>
+        <artifactId>agentic</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -85,10 +91,6 @@
                     <version>2.8.2</version>
                 </plugin>
 
-                <!--
-                   Maven Site lifecycle plugin, see:
-                   https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle
-                 -->
                 <plugin>
                     <artifactId>maven-site-plugin</artifactId>
                     <version>3.7.1</version>
@@ -109,6 +111,12 @@
             <groupId>io.temporal</groupId>
             <artifactId>temporal-sdk</artifactId>
             <version>1.24.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
