fix: various fixes so the server will start

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - .:/home/app
     environment:
       - DB=postgresql
       - DB_PORT=5432
+      - POSTGRES_HOST=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-
+      - POSTGRES_PASS=postgres
