--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 management.endpoints.web.exposure.include=health,info
 server.shutdown=immediate
+server.port=3000
 spring.lifecycle.timeout-per-shutdown-phase=1s
 telegram.bot.path=/telegram-webhook
 
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PASS}/agentic
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:5432/agentic
 spring.datasource.username=postgres
 spring.datasource.password=${POSTGRES_PASS}
 
