--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,11 @@
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>3.0.0</version>
                 </plugin>
-
+                <plugin>
+                    <groupId>org.flywaydb</groupId>
+                    <artifactId>flyway-maven-plugin</artifactId>
+                    <version>10.17.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
