--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   postgres:
     image: postgres:17
@@ -32,7 +31,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASS=postgres
+    ports:
+      - "3000:3000"
     environment:
+      - PORT=3000
       - DB=postgresql
       - DB_PORT=5432
       - POSTGRES_HOST=postgres
