--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=3000
 spring.lifecycle.timeout-per-shutdown-phase=1s
 telegram.bot.path=/telegram-webhook
 
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:5432/agentic
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_DB:agentic_dev}
 spring.datasource.username=postgres
 spring.datasource.password=${POSTGRES_PASS}
 
