fix: make temporal ui work through docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,10 @@ services:
     image: temporalio/auto-setup:latest
     ports:
       - "7233:7233"
+      - "8233:8233"
     depends_on:
       - postgres
     environment:
-      - TEMPORAL_ADDRESS=temporal:7233
       - DB=postgres12
       - DB_PORT=5432
       - POSTGRES_USER=postgres
@@ -25,8 +25,11 @@ services:
       - POSTGRES_SEEDS=postgres
       - POSTGRES_DB=temporal
       - DYNAMIC_CONFIG_FILE_PATH=config/dynamicconfig/development.yaml
+      - TEMPORAL_UI_ENABLED=true
     volumes:
       - ./dynamicconfig:/etc/temporal/config/dynamicconfig
+    entrypoint: temporal
+    command: server start-dev --ui-ip 0.0.0.0
 
   server:
     build:
