--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     depends_on:
       - postgres
     environment:
+      - TEMPORAL_ADDRESS=temporal:7233
       - DB=postgres12
       - DB_PORT=5432
       - POSTGRES_USER=postgres
@@ -29,7 +30,7 @@ services:
     volumes:
       - ./dynamicconfig:/etc/temporal/config/dynamicconfig
     entrypoint: temporal
-    command: server start-dev --ui-ip 0.0.0.0
+    command: server start-dev --ui-ip 0.0.0.0 --ip 0.0.0.0
 
   server:
     build:
@@ -39,6 +40,7 @@ services:
     ports:
       - "3000:3000"
     environment:
+      - TEMPORAL_ADDRESS=temporal:7233
       - DB=agentic_dev
       - DB_PORT=5432
       - POSTGRES_HOST=postgres
@@ -51,6 +53,7 @@ services:
       dockerfile: Dockerfile
       target: worker
     environment:
+      - TEMPORAL_ADDRESS=temporal:7233
       - DB=agentic_dev
       - DB_PORT=5432
       - POSTGRES_HOST=postgres
